--- a/MemojiCollector/MemojiCollector/Info.plist
+++ b/MemojiCollector/MemojiCollector/Info.plist
@@ -14,6 +14,16 @@
 				<string>MemojiCollector</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>pref</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>prefs</string>
+			</array>
+		</dict>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
